added /add_link endpoint
